callout spacing. Fixed bbc image

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -392,7 +392,7 @@ a.scroll-hint:hover {
 .callout {
   background-color: #000;
   color: #ccc;
-  padding-top:3em;
+  // padding-top:3em;
   margin-bottom:4em;
 
   h2 {
